clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_copy_batched<float> = rocblas_scopy_batched;
template <>
static constexpr auto rocblas_copy_batched<double> = rocblas_dcopy_batched;
template <>
static constexpr auto rocblas_copy_batched<rocblas_float_complex> = rocblas_ccopy_batched;
template <>
static constexpr auto rocblas_copy_batched<rocblas_double_complex> = rocblas_zcopy_batched;
template <>
static constexpr auto rocblas_copy_strided_batched<float> = rocblas_scopy_strided_batched;
template <>
static constexpr auto rocblas_copy_strided_batched<double> = rocblas_dcopy_strided_batched;
template <>
static constexpr auto
    rocblas_copy_strided_batched<rocblas_float_complex> = rocblas_ccopy_strided_batched;
template <>
static constexpr auto
    rocblas_copy_strided_batched<rocblas_double_complex> = rocblas_zcopy_strided_batched;
template <>
static constexpr auto rocblas_dot<float> = rocblas_sdot;
template <>
static constexpr auto rocblas_dot<double> = rocblas_ddot;
template <>
static constexpr auto rocblas_dot<rocblas_half> = rocblas_hdot;
template <>
static constexpr auto rocblas_dot<rocblas_bfloat16> = rocblas_bfdot;
template <>
static constexpr auto rocblas_dot<rocblas_float_complex> = rocblas_cdotu;
template <>
static constexpr auto rocblas_dot<rocblas_double_complex> = rocblas_zdotu;
template <>
static constexpr auto rocblas_dotc<rocblas_float_complex> = rocblas_cdotc;
template <>
static constexpr auto rocblas_dotc<rocblas_double_complex> = rocblas_zdotc;
template <>
static constexpr auto rocblas_dot_batched<float> = rocblas_sdot_batched;
template <>
static constexpr auto rocblas_dot_batched<double> = rocblas_ddot_batched;
template <>
static constexpr auto rocblas_dot_batched<rocblas_half> = rocblas_hdot_batched;